force-app/main/default/objects/Box_App_Detail__mdt/Box_App_Detail__mdt.object-meta.xml
<CustomObject>
    <label>Box App Detail</label>
    <pluralLabel>Box App Details</pluralLabel>
</CustomObject>