force-app/main/default/objects/Box_App_Detail__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>