force-app/main/default/objects/Box_App_Detail__mdt/fields/Enterprise_Id__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Id__c</fullName>
    <label>Enterprise Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>