force-app/main/default/objects/Box_App_Detail__mdt/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <label>Private Key</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>