force-app/main/default/objects/Box_App_Detail__mdt/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>